focus/internals/src/lib/operation/testing/snapshots/focus_internals__operation__testing__sync__clone_contains_top_level.snap
---
source: focus/internals/src/lib/operation/testing/sync.rs
expression: "&profile"
---
/*
!/*/
/focus/
*.bzl
BUILD*
WORKSPACE*

