focus/internals/src/lib/operation/testing/snapshots/focus_internals__operation__testing__sync__sync_layer_manipulation-4.snap
---
source: focus/internals/src/lib/operation/testing/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/library_b/
/mandatory_y/very_important_info/
/mandatory_z/
/project_b/
/project_b/src/main/java/com/example/cmdline/

