focus/internals/src/lib/operation/testing/snapshots/focus_internals__operation__testing__sync__sync_layer_manipulation.snap
---
source: focus/internals/src/lib/operation/testing/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/mandatory_y/
!/mandatory_y/*/
/mandatory_y/very_important_info/
/mandatory_z/

